src/App.css
@import url('https://fonts.googleapis.com/css?family=Nunito');
@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap');


:root {
  --alert: #b74444;
  --black: #000;
  --blue: #00A7D8;
  --dark_blue: #286ba2;
  --marine_blue: #2a6bcc;
  --dark_grey: #333333;
  --dim_grey: #696969;
  --grey: #d3d3d3;
  --light_alert: #df7474;
  --navbar: rgba(0,0,0, 0.5);
  --navbar_dark: rgba(0,0,0, 0.8);
  --orange: #FA9138;
  --red: #c4231d;
  --white: #f4f4f4;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: var(--grey);
  color: var(--dark_grey);
  font-family: 'Nunito', sans-serif;
  line-height: 1.6;
  overflow-y: scroll;
}

a {
  color: var(--blue);
}

.header a,
.Main a,
.BackToSearch a,
.ScrollToTop a {
  text-decoration: none;
}

.BackToSearch a,
.ScrollToTop a {
  color: var(--dark_grey);
}

.About a:visited,
.Footer a:visited {
  color: var(--alert);
}

.BackToSearch a:visited,
.ScrollToTop a:visited {
  color: var(--dark_grey);
}

.About a:visited:hover,
.Footer a:visited:hover {
  color: var(--light_alert);
}

a:hover {
  color: var(--marine_blue);
}

.BackToSearch a:hover,
.BackToSearch a:visited:hover,
.ScrollToTop a:hover,
.ScrollToTop a:visited:hover {
  color: var(--blue);
  opacity: 0.8;
}

a:active {
  color: var(--black);
}




img {
  width: 100%;
}

.container {
  margin: auto;
  max-width: 1100px;
  overflow: hidden;
  padding: 0 2rem;
  text-align: center;
}



/*
+ Navbar
*/
.header {
  background: url(img/sky.jpg) no-repeat top;
  background-size: 100vw 100vh;
}

.header_100 {
  height: 100vh;
}

.header_70 {
  height: 70vh;
}

.header_no_image {
  height: 10vh;
}

.header_404 {
  background: url(img/404.jpg) no-repeat top;
  height: 100vh;
}

.navbar {
  align-items: center;
  background-color: var(--navbar);
  box-shadow: inset 0 0 5rem rgb(10, 22, 29);
  display: flex;
  font-size: 1.2rem;
  height: 10vh;
  justify-content: center;
  padding: 0.7rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.navbar_dark {
  background-color: var(--navbar_dark);
}
.navbar_other {
  box-shadow: none;
}

.navbar a {
  color: var(--white);
  margin: 0 0.25rem;
  padding: 0.45rem;
}

.navbar .active {
  color: var(--orange);
}

.logo_wrapper {
  align-items: center;
  display: flex;
}

.logo_img {
  margin-right: 3px;
  width: 35px;
}

.nav_link_item {
  padding: 0 10px;
  text-transform: uppercase;
}

.nav_link_item.about {
  margin-right: 35px;
}



/*
+ Modal
*/

.Modal {
  background-color: var(--navbar_dark);
  height: 100%;
  left: 0;
  margin-left: auto;
  margin-right: auto;
  overflow: auto;
  position: fixed;
  text-align: center;
  top: 10vh;
  width: 100%;
  z-index: 10;
}

.modal_content {
  background-color: var(--white);
  box-shadow: 4px 4px 20px 8px rgba(0, 167, 216, 0.8);
  box-shadow: 1px 1px 86px 10px rgba(0, 167, 216, 0.5);
  border-radius: 8px;
  margin: 10vh auto auto;
  width: 35vw;
}

.modal_text {
  /*align-items: center;*/
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 30px;
}

.modal_text h1 {
  display: inline;
  font-size: 2.4rem;
  margin: 2vh;
}

.modal_text .dots {
  position: absolute;
  margin-left: 3px;
}

.modal_text h2 {
  font-size: 1.8rem;
}

.modal_text h2.location{
  /*margin: 5vh 0;*/
}

.modal_text h2.wait{
  /*margin: 5vh 0;*/
}

.modal_content span {
  text-transform: capitalize;
}



/*
+ Alert
*/

.alert {
  background: var(--white);
  border: 4px solid var(--alert);
  border-radius: 4px;
  font-size: 1.4rem;
  left: 0;
  margin-left: auto;
  margin-right: auto;
  padding: 20px;
  position: absolute;
  right: 0;
  text-align: center;
  top: 15vh;
  width: 35vw;
}

.warning_logo {
  width: 64px;
}

.alert h2 {
  color: var(--red);
}

p.close {
  margin-top: 3vh;
}



/*
+ Search
*/

form {
  left: 0;
  margin-left: auto;
  margin-right: auto;
  position: absolute;
  right: 0;
  text-align: center;
  top: 35vh;
  width: 50%;
}

.form_content {
  position:relative;
}



/*
+ Input
*/
.search_icon,
.close_icon {
  cursor: pointer;
  position: absolute;
}

.search_icon {
  left: 14px;
  top: 10px;
  width: 35px;
}

.close_icon {
  right: 14px;
  top: 18px;
  width: 20px;
}

input {
  font-family: 'Nunito', sans-serif;
  margin: 1.2rem 0;
}

input[type='text'] {
  border: none;
  border-radius: 4px;
  display: block;
  font-size: 1.2rem;
  letter-spacing: 1px;
  padding: 1rem 1rem 1rem 4rem;
  width: 100%;
}

input[type='text']:focus {
  background-color: rgb(245, 235, 245);
}

input[type='submit'],
button {
  font: inherit;
  font-size: 1rem;
  padding: 0.6rem;
}



/*
+ Button
*/
.button {
  background: var(--white);
  border: none;
  border-radius: 4px;
  color: var(--dark_grey);
  cursor: pointer;
  display: inline-block;
  font-size: 0.5rem;
  outline: none;
  padding: 0.4rem 1.3rem;
}

.button_block {
  display: block;
  margin: auto;
  width: 25%;
}

.button_search {
  background: var(--blue);
  color: var(--white);
  margin: 4vh auto 2vh;
}

.button_search:hover {
  opacity: 0.95;
}

.button_clear {
  background: var(--orange);
  color: var(--white);
  font-size: 1rem;
  padding: 0.6rem;
}

.button_clear:hover {
  opacity: 0.9;
}

.button_index,
.button_home {
  background: var(--blue);
  border: none;
  border-radius: 4px;
  color: var(--white);
  cursor: pointer;
  display: block;
  font-size: 1rem;
  margin-bottom: 7vh;
  outline: none;
  padding: 0.6rem;
  min-width: 20%;
}

.button_home {
  display: inline-block;
  margin: 0;
  width: 12rem;
}

.button_ok,
.button_cancel_search{
  background: var(--blue);
  color: var(--white);
  font-size: 1rem;
  margin: 3vh;
  min-width: 20%;
}

.button_to_top,
.button_to_left {
  background-color: rgba(255, 255, 255, 0.01);
  padding: 2vh;
}
/* ... */

